cmake_minimum_required(VERSION 3.24)
project(
	tint
	LANGUAGES CXX
)

set(TINT_CORE_SOURCES
	"src/tint/api/common/binding_point.h"
	"src/tint/api/common/override_id.h"
	"src/tint/api/common/vertex_pulling_config.cc"
	"src/tint/api/common/vertex_pulling_config.h"
	"src/tint/api/tint.cc"
	"src/tint/api/tint.h"
	"src/tint/lang/core/access.cc"
	"src/tint/lang/core/access.def"
	"src/tint/lang/core/access.h"
	"src/tint/lang/core/address_space.cc"
	"src/tint/lang/core/address_space.def"
	"src/tint/lang/core/address_space.h"
	"src/tint/lang/core/attribute.cc"
	"src/tint/lang/core/attribute.h"
	"src/tint/lang/core/binary_op.cc"
	"src/tint/lang/core/binary_op.h"
	"src/tint/lang/core/builtin_fn.cc"
	"src/tint/lang/core/builtin_fn.h"
	"src/tint/lang/core/builtin_type.cc"
	"src/tint/lang/core/builtin_type.h"
	"src/tint/lang/core/builtin_value.cc"
	"src/tint/lang/core/builtin_value.h"
	"src/tint/lang/core/constant/clone_context.h"
	"src/tint/lang/core/constant/composite.cc"
	"src/tint/lang/core/constant/composite.h"
	"src/tint/lang/core/constant/eval.cc"
	"src/tint/lang/core/constant/eval.h"
	"src/tint/lang/core/constant/invalid.cc"
	"src/tint/lang/core/constant/invalid.h"
	"src/tint/lang/core/constant/manager.cc"
	"src/tint/lang/core/constant/manager.h"
	"src/tint/lang/core/constant/node.cc"
	"src/tint/lang/core/constant/node.h"
	"src/tint/lang/core/constant/scalar.cc"
	"src/tint/lang/core/constant/scalar.h"
	"src/tint/lang/core/constant/splat.cc"
	"src/tint/lang/core/constant/splat.h"
	"src/tint/lang/core/constant/value.cc"
	"src/tint/lang/core/constant/value.h"
	"src/tint/lang/core/core.def"
	"src/tint/lang/core/evaluation_stage.h"
	"src/tint/lang/core/fluent_types.h"
	"src/tint/lang/core/interpolation.h"
	"src/tint/lang/core/interpolation_sampling.cc"
	"src/tint/lang/core/interpolation_sampling.h"
	"src/tint/lang/core/interpolation_type.cc"
	"src/tint/lang/core/interpolation_type.h"
	"src/tint/lang/core/intrinsic/ctor_conv.cc"
	"src/tint/lang/core/intrinsic/ctor_conv.h"
	"src/tint/lang/core/intrinsic/data.cc"
	"src/tint/lang/core/intrinsic/dialect.h"
	"src/tint/lang/core/intrinsic/table.cc"
	"src/tint/lang/core/intrinsic/table_data.h"
	"src/tint/lang/core/intrinsic/table.h"
	"src/tint/lang/core/intrinsic/type_matchers.h"
	"src/tint/lang/core/io_attributes.h"
	"src/tint/lang/core/ir/access.cc"
	"src/tint/lang/core/ir/access.h"
	"src/tint/lang/core/ir/analysis/integer_range_analysis.cc"
	"src/tint/lang/core/ir/analysis/integer_range_analysis.h"
	"src/tint/lang/core/ir/analysis/loop_analysis.cc"
	"src/tint/lang/core/ir/analysis/loop_analysis.h"
	"src/tint/lang/core/ir/binary.cc"
	"src/tint/lang/core/ir/binary.h"
	"src/tint/lang/core/ir/bitcast.cc"
	"src/tint/lang/core/ir/bitcast.h"
	"src/tint/lang/core/ir/block.cc"
	"src/tint/lang/core/ir/block.h"
	"src/tint/lang/core/ir/block_param.cc"
	"src/tint/lang/core/ir/block_param.h"
	"src/tint/lang/core/ir/break_if.cc"
	"src/tint/lang/core/ir/break_if.h"
	"src/tint/lang/core/ir/builder.cc"
	"src/tint/lang/core/ir/builder.h"
	"src/tint/lang/core/ir/builtin_call.cc"
	"src/tint/lang/core/ir/builtin_call.h"
	"src/tint/lang/core/ir/call.cc"
	"src/tint/lang/core/ir/call.h"
	"src/tint/lang/core/ir/clone_context.cc"
	"src/tint/lang/core/ir/clone_context.h"
	"src/tint/lang/core/ir/constant.cc"
	"src/tint/lang/core/ir/constant.h"
	"src/tint/lang/core/ir/constexpr_if.cc"
	"src/tint/lang/core/ir/constexpr_if.h"
	"src/tint/lang/core/ir/const_param_validator.cc"
	"src/tint/lang/core/ir/const_param_validator.h"
	"src/tint/lang/core/ir/construct.cc"
	"src/tint/lang/core/ir/construct.h"
	"src/tint/lang/core/ir/continue.cc"
	"src/tint/lang/core/ir/continue.h"
	"src/tint/lang/core/ir/control_instruction.cc"
	"src/tint/lang/core/ir/control_instruction.h"
	"src/tint/lang/core/ir/convert.cc"
	"src/tint/lang/core/ir/convert.h"
	"src/tint/lang/core/ir/core_binary.cc"
	"src/tint/lang/core/ir/core_binary.h"
	"src/tint/lang/core/ir/core_builtin_call.cc"
	"src/tint/lang/core/ir/core_builtin_call.h"
	"src/tint/lang/core/ir/core_unary.cc"
	"src/tint/lang/core/ir/core_unary.h"
	"src/tint/lang/core/ir/disassembler.cc"
	"src/tint/lang/core/ir/disassembler.h"
	"src/tint/lang/core/ir/discard.cc"
	"src/tint/lang/core/ir/discard.h"
	"src/tint/lang/core/ir/evaluator.cc"
	"src/tint/lang/core/ir/evaluator.h"
	"src/tint/lang/core/ir/exit.cc"
	"src/tint/lang/core/ir/exit.h"
	"src/tint/lang/core/ir/exit_if.cc"
	"src/tint/lang/core/ir/exit_if.h"
	"src/tint/lang/core/ir/exit_loop.cc"
	"src/tint/lang/core/ir/exit_loop.h"
	"src/tint/lang/core/ir/exit_switch.cc"
	"src/tint/lang/core/ir/exit_switch.h"
	"src/tint/lang/core/ir/function.cc"
	"src/tint/lang/core/ir/function.h"
	"src/tint/lang/core/ir/function_param.cc"
	"src/tint/lang/core/ir/function_param.h"
	"src/tint/lang/core/ir/ice.h"
	"src/tint/lang/core/ir/if.cc"
	"src/tint/lang/core/ir/if.h"
	"src/tint/lang/core/ir/instruction.cc"
	"src/tint/lang/core/ir/instruction.h"
	"src/tint/lang/core/ir/instruction_result.cc"
	"src/tint/lang/core/ir/instruction_result.h"
	"src/tint/lang/core/ir/ir_helper_test.h"
	"src/tint/lang/core/ir/let.cc"
	"src/tint/lang/core/ir/let.h"
	"src/tint/lang/core/ir/load.cc"
	"src/tint/lang/core/ir/load.h"
	"src/tint/lang/core/ir/load_vector_element.cc"
	"src/tint/lang/core/ir/load_vector_element.h"
	"src/tint/lang/core/ir/loop.cc"
	"src/tint/lang/core/ir/loop.h"
	"src/tint/lang/core/ir/member_builtin_call.cc"
	"src/tint/lang/core/ir/member_builtin_call.h"
	"src/tint/lang/core/ir/module.cc"
	"src/tint/lang/core/ir/module.h"
	"src/tint/lang/core/ir/multi_in_block.cc"
	"src/tint/lang/core/ir/multi_in_block.h"
	"src/tint/lang/core/ir/next_iteration.cc"
	"src/tint/lang/core/ir/next_iteration.h"
	"src/tint/lang/core/ir/operand_instruction.cc"
	"src/tint/lang/core/ir/operand_instruction.h"
	"src/tint/lang/core/ir/override.cc"
	"src/tint/lang/core/ir/override.h"
	"src/tint/lang/core/ir/phony.cc"
	"src/tint/lang/core/ir/phony.h"
	"src/tint/lang/core/ir/referenced_functions.h"
	"src/tint/lang/core/ir/referenced_module_decls.h"
	"src/tint/lang/core/ir/referenced_module_vars.h"
	"src/tint/lang/core/ir/reflection.cc"
	"src/tint/lang/core/ir/reflection.h"
	"src/tint/lang/core/ir/return.cc"
	"src/tint/lang/core/ir/return.h"
	"src/tint/lang/core/ir/store.cc"
	"src/tint/lang/core/ir/store.h"
	"src/tint/lang/core/ir/store_vector_element.cc"
	"src/tint/lang/core/ir/store_vector_element.h"
	"src/tint/lang/core/ir/switch.cc"
	"src/tint/lang/core/ir/switch.h"
	"src/tint/lang/core/ir/swizzle.cc"
	"src/tint/lang/core/ir/swizzle.h"
	"src/tint/lang/core/ir/terminate_invocation.cc"
	"src/tint/lang/core/ir/terminate_invocation.h"
	"src/tint/lang/core/ir/terminator.cc"
	"src/tint/lang/core/ir/terminator.h"
	"src/tint/lang/core/ir/transform/add_empty_entry_point.cc"
	"src/tint/lang/core/ir/transform/add_empty_entry_point.h"
	"src/tint/lang/core/ir/transform/array_length_from_uniform.cc"
	"src/tint/lang/core/ir/transform/array_length_from_uniform.h"
	"src/tint/lang/core/ir/transform/bgra8unorm_polyfill.cc"
	"src/tint/lang/core/ir/transform/bgra8unorm_polyfill.h"
	"src/tint/lang/core/ir/transform/binary_polyfill.cc"
	"src/tint/lang/core/ir/transform/binary_polyfill.h"
	"src/tint/lang/core/ir/transform/binding_remapper.cc"
	"src/tint/lang/core/ir/transform/binding_remapper.h"
	"src/tint/lang/core/ir/transform/block_decorated_structs.cc"
	"src/tint/lang/core/ir/transform/block_decorated_structs.h"
	"src/tint/lang/core/ir/transform/builtin_polyfill.cc"
	"src/tint/lang/core/ir/transform/builtin_polyfill.h"
	"src/tint/lang/core/ir/transform/combine_access_instructions.cc"
	"src/tint/lang/core/ir/transform/combine_access_instructions.h"
	"src/tint/lang/core/ir/transform/conversion_polyfill.cc"
	"src/tint/lang/core/ir/transform/conversion_polyfill.h"
	"src/tint/lang/core/ir/transform/demote_to_helper.cc"
	"src/tint/lang/core/ir/transform/demote_to_helper.h"
	"src/tint/lang/core/ir/transform/direct_variable_access.cc"
	"src/tint/lang/core/ir/transform/direct_variable_access.h"
	"src/tint/lang/core/ir/transform/helper_test.h"
	"src/tint/lang/core/ir/transform/multiplanar_external_texture.cc"
	"src/tint/lang/core/ir/transform/multiplanar_external_texture.h"
	"src/tint/lang/core/ir/transform/multiplanar_options.h"
	"src/tint/lang/core/ir/transform/prepare_immediate_data.cc"
	"src/tint/lang/core/ir/transform/prepare_immediate_data.h"
	"src/tint/lang/core/ir/transform/preserve_padding.cc"
	"src/tint/lang/core/ir/transform/preserve_padding.h"
	"src/tint/lang/core/ir/transform/prevent_infinite_loops.cc"
	"src/tint/lang/core/ir/transform/prevent_infinite_loops.h"
	"src/tint/lang/core/ir/transform/remove_continue_in_switch.cc"
	"src/tint/lang/core/ir/transform/remove_continue_in_switch.h"
	"src/tint/lang/core/ir/transform/remove_terminator_args.cc"
	"src/tint/lang/core/ir/transform/remove_terminator_args.h"
	"src/tint/lang/core/ir/transform/rename_conflicts.cc"
	"src/tint/lang/core/ir/transform/rename_conflicts.h"
	"src/tint/lang/core/ir/transform/robustness.cc"
	"src/tint/lang/core/ir/transform/robustness.h"
	"src/tint/lang/core/ir/transform/shader_io.cc"
	"src/tint/lang/core/ir/transform/shader_io.h"
	"src/tint/lang/core/ir/transform/single_entry_point.cc"
	"src/tint/lang/core/ir/transform/single_entry_point.h"
	"src/tint/lang/core/ir/transform/std140.cc"
	"src/tint/lang/core/ir/transform/std140.h"
	"src/tint/lang/core/ir/transform/substitute_overrides.cc"
	"src/tint/lang/core/ir/transform/substitute_overrides.h"
	"src/tint/lang/core/ir/transform/value_to_let.cc"
	"src/tint/lang/core/ir/transform/value_to_let.h"
	"src/tint/lang/core/ir/transform/vectorize_scalar_matrix_constructors.cc"
	"src/tint/lang/core/ir/transform/vectorize_scalar_matrix_constructors.h"
	"src/tint/lang/core/ir/transform/vertex_pulling.cc"
	"src/tint/lang/core/ir/transform/vertex_pulling.h"
	"src/tint/lang/core/ir/transform/zero_init_workgroup_memory.cc"
	"src/tint/lang/core/ir/transform/zero_init_workgroup_memory.h"
	"src/tint/lang/core/ir/traverse.h"
	"src/tint/lang/core/ir/type/array_count.cc"
	"src/tint/lang/core/ir/type/array_count.h"
	"src/tint/lang/core/ir/unary.cc"
	"src/tint/lang/core/ir/unary.h"
	"src/tint/lang/core/ir/unreachable.cc"
	"src/tint/lang/core/ir/unreachable.h"
	"src/tint/lang/core/ir/unused.cc"
	"src/tint/lang/core/ir/unused.h"
	"src/tint/lang/core/ir/user_call.cc"
	"src/tint/lang/core/ir/user_call.h"
	"src/tint/lang/core/ir/validator.cc"
	"src/tint/lang/core/ir/validator.h"
	"src/tint/lang/core/ir/validator_test.h"
	"src/tint/lang/core/ir/value.cc"
	"src/tint/lang/core/ir/value.h"
	"src/tint/lang/core/ir/var.cc"
	"src/tint/lang/core/ir/var.h"
	"src/tint/lang/core/number.cc"
	"src/tint/lang/core/number.h"
	"src/tint/lang/core/parameter_usage.cc"
	"src/tint/lang/core/parameter_usage.h"
	"src/tint/lang/core/subgroup_matrix_kind.cc"
	"src/tint/lang/core/subgroup_matrix_kind.def"
	"src/tint/lang/core/subgroup_matrix_kind.h"
	"src/tint/lang/core/texel_format.cc"
	"src/tint/lang/core/texel_format.def"
	"src/tint/lang/core/texel_format.h"
	"src/tint/lang/core/type/abstract_float.cc"
	"src/tint/lang/core/type/abstract_float.h"
	"src/tint/lang/core/type/abstract_int.cc"
	"src/tint/lang/core/type/abstract_int.h"
	"src/tint/lang/core/type/abstract_numeric.cc"
	"src/tint/lang/core/type/abstract_numeric.h"
	"src/tint/lang/core/type/array.cc"
	"src/tint/lang/core/type/array_count.cc"
	"src/tint/lang/core/type/array_count.h"
	"src/tint/lang/core/type/array.h"
	"src/tint/lang/core/type/atomic.cc"
	"src/tint/lang/core/type/atomic.h"
	"src/tint/lang/core/type/binding_array.cc"
	"src/tint/lang/core/type/binding_array.h"
	"src/tint/lang/core/type/bool.cc"
	"src/tint/lang/core/type/bool.h"
	"src/tint/lang/core/type/builtin_structs.cc"
	"src/tint/lang/core/type/builtin_structs.h"
	"src/tint/lang/core/type/clone_context.h"
	"src/tint/lang/core/type/depth_multisampled_texture.cc"
	"src/tint/lang/core/type/depth_multisampled_texture.h"
	"src/tint/lang/core/type/depth_texture.cc"
	"src/tint/lang/core/type/depth_texture.h"
	"src/tint/lang/core/type/external_texture.cc"
	"src/tint/lang/core/type/external_texture.h"
	"src/tint/lang/core/type/f16.cc"
	"src/tint/lang/core/type/f16.h"
	"src/tint/lang/core/type/f32.cc"
	"src/tint/lang/core/type/f32.h"
	"src/tint/lang/core/type/function.cc"
	"src/tint/lang/core/type/function.h"
	"src/tint/lang/core/type/helper_test.h"
	"src/tint/lang/core/type/i32.cc"
	"src/tint/lang/core/type/i32.h"
	"src/tint/lang/core/type/i8.cc"
	"src/tint/lang/core/type/i8.h"
	"src/tint/lang/core/type/input_attachment.cc"
	"src/tint/lang/core/type/input_attachment.h"
	"src/tint/lang/core/type/invalid.cc"
	"src/tint/lang/core/type/invalid.h"
	"src/tint/lang/core/type/manager.cc"
	"src/tint/lang/core/type/manager.h"
	"src/tint/lang/core/type/matrix.cc"
	"src/tint/lang/core/type/matrix.h"
	"src/tint/lang/core/type/memory_view.cc"
	"src/tint/lang/core/type/memory_view.h"
	"src/tint/lang/core/type/multisampled_texture.cc"
	"src/tint/lang/core/type/multisampled_texture.h"
	"src/tint/lang/core/type/node.cc"
	"src/tint/lang/core/type/node.h"
	"src/tint/lang/core/type/numeric_scalar.cc"
	"src/tint/lang/core/type/numeric_scalar.h"
	"src/tint/lang/core/type/pointer.cc"
	"src/tint/lang/core/type/pointer.h"
	"src/tint/lang/core/type/reference.cc"
	"src/tint/lang/core/type/reference.h"
	"src/tint/lang/core/type/sampled_texture.cc"
	"src/tint/lang/core/type/sampled_texture.h"
	"src/tint/lang/core/type/sampler.cc"
	"src/tint/lang/core/type/sampler.h"
	"src/tint/lang/core/type/sampler_kind.cc"
	"src/tint/lang/core/type/sampler_kind.h"
	"src/tint/lang/core/type/scalar.cc"
	"src/tint/lang/core/type/scalar.h"
	"src/tint/lang/core/type/storage_texture.cc"
	"src/tint/lang/core/type/storage_texture.h"
	"src/tint/lang/core/type/struct.cc"
	"src/tint/lang/core/type/struct.h"
	"src/tint/lang/core/type/subgroup_matrix.cc"
	"src/tint/lang/core/type/subgroup_matrix.h"
	"src/tint/lang/core/type/texture.cc"
	"src/tint/lang/core/type/texture_dimension.cc"
	"src/tint/lang/core/type/texture_dimension.h"
	"src/tint/lang/core/type/texture.h"
	"src/tint/lang/core/type/type.cc"
	"src/tint/lang/core/type/type.h"
	"src/tint/lang/core/type/u32.cc"
	"src/tint/lang/core/type/u32.h"
	"src/tint/lang/core/type/u64.cc"
	"src/tint/lang/core/type/u64.h"
	"src/tint/lang/core/type/u8.cc"
	"src/tint/lang/core/type/u8.h"
	"src/tint/lang/core/type/unique_node.cc"
	"src/tint/lang/core/type/unique_node.h"
	"src/tint/lang/core/type/vector.cc"
	"src/tint/lang/core/type/vector.h"
	"src/tint/lang/core/type/void.cc"
	"src/tint/lang/core/type/void.h"
	"src/tint/lang/core/unary_op.cc"
	"src/tint/lang/core/unary_op.h"
)

set(TINT_SPIRV_SOURCES
	"src/tint/lang/spirv/builtin_fn.cc"
	"src/tint/lang/spirv/builtin_fn.h"
	"src/tint/lang/spirv/intrinsic/data.cc"
	"src/tint/lang/spirv/intrinsic/dialect.h"
	"src/tint/lang/spirv/intrinsic/type_matchers.h"
	"src/tint/lang/spirv/ir/builtin_call.cc"
	"src/tint/lang/spirv/ir/builtin_call.h"
	"src/tint/lang/spirv/ir/literal_operand.cc"
	"src/tint/lang/spirv/ir/literal_operand.h"
	"src/tint/lang/spirv/spirv.def"
	"src/tint/lang/spirv/type/explicit_layout_array.cc"
	"src/tint/lang/spirv/type/explicit_layout_array.h"
	"src/tint/lang/spirv/type/image.cc"
	"src/tint/lang/spirv/type/image.h"
	"src/tint/lang/spirv/type/sampled_image.cc"
	"src/tint/lang/spirv/type/sampled_image.h"
	"src/tint/lang/spirv/validate/validate.cc"
	"src/tint/lang/spirv/validate/validate.h"
	"src/tint/lang/spirv/writer/common/binary_writer.cc"
	"src/tint/lang/spirv/writer/common/binary_writer.h"
	"src/tint/lang/spirv/writer/common/function.cc"
	"src/tint/lang/spirv/writer/common/function.h"
	"src/tint/lang/spirv/writer/common/helper_test.h"
	"src/tint/lang/spirv/writer/common/instruction.cc"
	"src/tint/lang/spirv/writer/common/instruction.h"
	"src/tint/lang/spirv/writer/common/module.cc"
	"src/tint/lang/spirv/writer/common/module.h"
	"src/tint/lang/spirv/writer/common/operand.cc"
	"src/tint/lang/spirv/writer/common/operand.h"
	"src/tint/lang/spirv/writer/common/option_helper.cc"
	"src/tint/lang/spirv/writer/common/option_helpers.h"
	"src/tint/lang/spirv/writer/common/options.h"
	"src/tint/lang/spirv/writer/common/output.cc"
	"src/tint/lang/spirv/writer/common/output.h"
	"src/tint/lang/spirv/writer/common/spv_dump_test.h"
	"src/tint/lang/spirv/writer/helpers/generate_bindings.cc"
	"src/tint/lang/spirv/writer/helpers/generate_bindings.h"
	"src/tint/lang/spirv/writer/printer/printer.cc"
	"src/tint/lang/spirv/writer/printer/printer.h"
	"src/tint/lang/spirv/writer/raise/builtin_polyfill.cc"
	"src/tint/lang/spirv/writer/raise/builtin_polyfill.h"
	"src/tint/lang/spirv/writer/raise/expand_implicit_splats.cc"
	"src/tint/lang/spirv/writer/raise/expand_implicit_splats.h"
	"src/tint/lang/spirv/writer/raise/fork_explicit_layout_types.cc"
	"src/tint/lang/spirv/writer/raise/fork_explicit_layout_types.h"
	"src/tint/lang/spirv/writer/raise/handle_matrix_arithmetic.cc"
	"src/tint/lang/spirv/writer/raise/handle_matrix_arithmetic.h"
	"src/tint/lang/spirv/writer/raise/merge_return.cc"
	"src/tint/lang/spirv/writer/raise/merge_return.h"
	"src/tint/lang/spirv/writer/raise/pass_matrix_by_pointer.cc"
	"src/tint/lang/spirv/writer/raise/pass_matrix_by_pointer.h"
	"src/tint/lang/spirv/writer/raise/raise.cc"
	"src/tint/lang/spirv/writer/raise/raise.h"
	"src/tint/lang/spirv/writer/raise/remove_unreachable_in_loop_continuing.cc"
	"src/tint/lang/spirv/writer/raise/remove_unreachable_in_loop_continuing.h"
	"src/tint/lang/spirv/writer/raise/shader_io.cc"
	"src/tint/lang/spirv/writer/raise/shader_io.h"
	"src/tint/lang/spirv/writer/raise/var_for_dynamic_index.cc"
	"src/tint/lang/spirv/writer/raise/var_for_dynamic_index.h"
	"src/tint/lang/spirv/writer/writer.cc"
	"src/tint/lang/spirv/writer/writer.h"
)

set(TINT_WGSL_SOURCES
	"src/tint/lang/wgsl/allowed_features.h"
	"src/tint/lang/wgsl/ast/accessor_expression.cc"
	"src/tint/lang/wgsl/ast/accessor_expression.h"
	"src/tint/lang/wgsl/ast/alias.cc"
	"src/tint/lang/wgsl/ast/alias.h"
	"src/tint/lang/wgsl/ast/assignment_statement.cc"
	"src/tint/lang/wgsl/ast/assignment_statement.h"
	"src/tint/lang/wgsl/ast/attribute.cc"
	"src/tint/lang/wgsl/ast/attribute.h"
	"src/tint/lang/wgsl/ast/binary_expression.cc"
	"src/tint/lang/wgsl/ast/binary_expression.h"
	"src/tint/lang/wgsl/ast/binding_attribute.cc"
	"src/tint/lang/wgsl/ast/binding_attribute.h"
	"src/tint/lang/wgsl/ast/blend_src_attribute.cc"
	"src/tint/lang/wgsl/ast/blend_src_attribute.h"
	"src/tint/lang/wgsl/ast/block_statement.cc"
	"src/tint/lang/wgsl/ast/block_statement.h"
	"src/tint/lang/wgsl/ast/bool_literal_expression.cc"
	"src/tint/lang/wgsl/ast/bool_literal_expression.h"
	"src/tint/lang/wgsl/ast/break_if_statement.cc"
	"src/tint/lang/wgsl/ast/break_if_statement.h"
	"src/tint/lang/wgsl/ast/break_statement.cc"
	"src/tint/lang/wgsl/ast/break_statement.h"
	"src/tint/lang/wgsl/ast/builder.cc"
	"src/tint/lang/wgsl/ast/builder.h"
	"src/tint/lang/wgsl/ast/builtin_attribute.cc"
	"src/tint/lang/wgsl/ast/builtin_attribute.h"
	"src/tint/lang/wgsl/ast/builtin_texture_helper_test.h"
	"src/tint/lang/wgsl/ast/call_expression.cc"
	"src/tint/lang/wgsl/ast/call_expression.h"
	"src/tint/lang/wgsl/ast/call_statement.cc"
	"src/tint/lang/wgsl/ast/call_statement.h"
	"src/tint/lang/wgsl/ast/case_selector.cc"
	"src/tint/lang/wgsl/ast/case_selector.h"
	"src/tint/lang/wgsl/ast/case_statement.cc"
	"src/tint/lang/wgsl/ast/case_statement.h"
	"src/tint/lang/wgsl/ast/clone_context.cc"
	"src/tint/lang/wgsl/ast/clone_context.h"
	"src/tint/lang/wgsl/ast/color_attribute.cc"
	"src/tint/lang/wgsl/ast/color_attribute.h"
	"src/tint/lang/wgsl/ast/compound_assignment_statement.cc"
	"src/tint/lang/wgsl/ast/compound_assignment_statement.h"
	"src/tint/lang/wgsl/ast/const_assert.cc"
	"src/tint/lang/wgsl/ast/const_assert.h"
	"src/tint/lang/wgsl/ast/const.cc"
	"src/tint/lang/wgsl/ast/const.h"
	"src/tint/lang/wgsl/ast/continue_statement.cc"
	"src/tint/lang/wgsl/ast/continue_statement.h"
	"src/tint/lang/wgsl/ast/diagnostic_attribute.cc"
	"src/tint/lang/wgsl/ast/diagnostic_attribute.h"
	"src/tint/lang/wgsl/ast/diagnostic_control.cc"
	"src/tint/lang/wgsl/ast/diagnostic_control.h"
	"src/tint/lang/wgsl/ast/diagnostic_directive.cc"
	"src/tint/lang/wgsl/ast/diagnostic_directive.h"
	"src/tint/lang/wgsl/ast/diagnostic_rule_name.cc"
	"src/tint/lang/wgsl/ast/diagnostic_rule_name.h"
	"src/tint/lang/wgsl/ast/disable_validation_attribute.cc"
	"src/tint/lang/wgsl/ast/disable_validation_attribute.h"
	"src/tint/lang/wgsl/ast/discard_statement.cc"
	"src/tint/lang/wgsl/ast/discard_statement.h"
	"src/tint/lang/wgsl/ast/enable.cc"
	"src/tint/lang/wgsl/ast/enable.h"
	"src/tint/lang/wgsl/ast/expression.cc"
	"src/tint/lang/wgsl/ast/expression.h"
	"src/tint/lang/wgsl/ast/extension.cc"
	"src/tint/lang/wgsl/ast/extension.h"
	"src/tint/lang/wgsl/ast/float_literal_expression.cc"
	"src/tint/lang/wgsl/ast/float_literal_expression.h"
	"src/tint/lang/wgsl/ast/for_loop_statement.cc"
	"src/tint/lang/wgsl/ast/for_loop_statement.h"
	"src/tint/lang/wgsl/ast/function.cc"
	"src/tint/lang/wgsl/ast/function.h"
	"src/tint/lang/wgsl/ast/group_attribute.cc"
	"src/tint/lang/wgsl/ast/group_attribute.h"
	"src/tint/lang/wgsl/ast/helper_test.h"
	"src/tint/lang/wgsl/ast/id_attribute.cc"
	"src/tint/lang/wgsl/ast/id_attribute.h"
	"src/tint/lang/wgsl/ast/identifier.cc"
	"src/tint/lang/wgsl/ast/identifier_expression.cc"
	"src/tint/lang/wgsl/ast/identifier_expression.h"
	"src/tint/lang/wgsl/ast/identifier.h"
	"src/tint/lang/wgsl/ast/if_statement.cc"
	"src/tint/lang/wgsl/ast/if_statement.h"
	"src/tint/lang/wgsl/ast/increment_decrement_statement.cc"
	"src/tint/lang/wgsl/ast/increment_decrement_statement.h"
	"src/tint/lang/wgsl/ast/index_accessor_expression.cc"
	"src/tint/lang/wgsl/ast/index_accessor_expression.h"
	"src/tint/lang/wgsl/ast/input_attachment_index_attribute.cc"
	"src/tint/lang/wgsl/ast/input_attachment_index_attribute.h"
	"src/tint/lang/wgsl/ast/internal_attribute.cc"
	"src/tint/lang/wgsl/ast/internal_attribute.h"
	"src/tint/lang/wgsl/ast/interpolate_attribute.cc"
	"src/tint/lang/wgsl/ast/interpolate_attribute.h"
	"src/tint/lang/wgsl/ast/int_literal_expression.cc"
	"src/tint/lang/wgsl/ast/int_literal_expression.h"
	"src/tint/lang/wgsl/ast/invariant_attribute.cc"
	"src/tint/lang/wgsl/ast/invariant_attribute.h"
	"src/tint/lang/wgsl/ast/let.cc"
	"src/tint/lang/wgsl/ast/let.h"
	"src/tint/lang/wgsl/ast/literal_expression.cc"
	"src/tint/lang/wgsl/ast/literal_expression.h"
	"src/tint/lang/wgsl/ast/location_attribute.cc"
	"src/tint/lang/wgsl/ast/location_attribute.h"
	"src/tint/lang/wgsl/ast/loop_statement.cc"
	"src/tint/lang/wgsl/ast/loop_statement.h"
	"src/tint/lang/wgsl/ast/member_accessor_expression.cc"
	"src/tint/lang/wgsl/ast/member_accessor_expression.h"
	"src/tint/lang/wgsl/ast/module.cc"
	"src/tint/lang/wgsl/ast/module.h"
	"src/tint/lang/wgsl/ast/must_use_attribute.cc"
	"src/tint/lang/wgsl/ast/must_use_attribute.h"
	"src/tint/lang/wgsl/ast/node.cc"
	"src/tint/lang/wgsl/ast/node.h"
	"src/tint/lang/wgsl/ast/node_id.h"
	"src/tint/lang/wgsl/ast/override.cc"
	"src/tint/lang/wgsl/ast/override.h"
	"src/tint/lang/wgsl/ast/parameter.cc"
	"src/tint/lang/wgsl/ast/parameter.h"
	"src/tint/lang/wgsl/ast/phony_expression.cc"
	"src/tint/lang/wgsl/ast/phony_expression.h"
	"src/tint/lang/wgsl/ast/pipeline_stage.cc"
	"src/tint/lang/wgsl/ast/pipeline_stage.h"
	"src/tint/lang/wgsl/ast/requires.cc"
	"src/tint/lang/wgsl/ast/requires.h"
	"src/tint/lang/wgsl/ast/return_statement.cc"
	"src/tint/lang/wgsl/ast/return_statement.h"
	"src/tint/lang/wgsl/ast/row_major_attribute.cc"
	"src/tint/lang/wgsl/ast/row_major_attribute.h"
	"src/tint/lang/wgsl/ast/stage_attribute.cc"
	"src/tint/lang/wgsl/ast/stage_attribute.h"
	"src/tint/lang/wgsl/ast/statement.cc"
	"src/tint/lang/wgsl/ast/statement.h"
	"src/tint/lang/wgsl/ast/stride_attribute.cc"
	"src/tint/lang/wgsl/ast/stride_attribute.h"
	"src/tint/lang/wgsl/ast/struct.cc"
	"src/tint/lang/wgsl/ast/struct.h"
	"src/tint/lang/wgsl/ast/struct_member_align_attribute.cc"
	"src/tint/lang/wgsl/ast/struct_member_align_attribute.h"
	"src/tint/lang/wgsl/ast/struct_member.cc"
	"src/tint/lang/wgsl/ast/struct_member.h"
	"src/tint/lang/wgsl/ast/struct_member_offset_attribute.cc"
	"src/tint/lang/wgsl/ast/struct_member_offset_attribute.h"
	"src/tint/lang/wgsl/ast/struct_member_size_attribute.cc"
	"src/tint/lang/wgsl/ast/struct_member_size_attribute.h"
	"src/tint/lang/wgsl/ast/switch_statement.cc"
	"src/tint/lang/wgsl/ast/switch_statement.h"
	"src/tint/lang/wgsl/ast/templated_identifier.cc"
	"src/tint/lang/wgsl/ast/templated_identifier.h"
	"src/tint/lang/wgsl/ast/transform/add_empty_entry_point.cc"
	"src/tint/lang/wgsl/ast/transform/add_empty_entry_point.h"
	"src/tint/lang/wgsl/ast/transform/array_length_from_uniform.cc"
	"src/tint/lang/wgsl/ast/transform/array_length_from_uniform.h"
	"src/tint/lang/wgsl/ast/transform/binding_remapper.cc"
	"src/tint/lang/wgsl/ast/transform/binding_remapper.h"
	"src/tint/lang/wgsl/ast/transform/builtin_polyfill.cc"
	"src/tint/lang/wgsl/ast/transform/builtin_polyfill.h"
	"src/tint/lang/wgsl/ast/transform/canonicalize_entry_point_io.cc"
	"src/tint/lang/wgsl/ast/transform/canonicalize_entry_point_io.h"
	"src/tint/lang/wgsl/ast/transform/data.cc"
	"src/tint/lang/wgsl/ast/transform/data.h"
	"src/tint/lang/wgsl/ast/transform/demote_to_helper.cc"
	"src/tint/lang/wgsl/ast/transform/demote_to_helper.h"
	"src/tint/lang/wgsl/ast/transform/direct_variable_access.cc"
	"src/tint/lang/wgsl/ast/transform/direct_variable_access.h"
	"src/tint/lang/wgsl/ast/transform/disable_uniformity_analysis.cc"
	"src/tint/lang/wgsl/ast/transform/disable_uniformity_analysis.h"
	"src/tint/lang/wgsl/ast/transform/expand_compound_assignment.cc"
	"src/tint/lang/wgsl/ast/transform/expand_compound_assignment.h"
	"src/tint/lang/wgsl/ast/transform/first_index_offset.cc"
	"src/tint/lang/wgsl/ast/transform/first_index_offset.h"
	"src/tint/lang/wgsl/ast/transform/fold_constants.cc"
	"src/tint/lang/wgsl/ast/transform/fold_constants.h"
	"src/tint/lang/wgsl/ast/transform/get_insertion_point.cc"
	"src/tint/lang/wgsl/ast/transform/get_insertion_point.h"
	"src/tint/lang/wgsl/ast/transform/helper_test.h"
	"src/tint/lang/wgsl/ast/transform/hoist_to_decl_before.cc"
	"src/tint/lang/wgsl/ast/transform/hoist_to_decl_before.h"
	"src/tint/lang/wgsl/ast/transform/manager.cc"
	"src/tint/lang/wgsl/ast/transform/manager.h"
	"src/tint/lang/wgsl/ast/transform/multiplanar_external_texture.cc"
	"src/tint/lang/wgsl/ast/transform/multiplanar_external_texture.h"
	"src/tint/lang/wgsl/ast/transform/promote_initializers_to_let.cc"
	"src/tint/lang/wgsl/ast/transform/promote_initializers_to_let.h"
	"src/tint/lang/wgsl/ast/transform/promote_side_effects_to_decl.cc"
	"src/tint/lang/wgsl/ast/transform/promote_side_effects_to_decl.h"
	"src/tint/lang/wgsl/ast/transform/remove_continue_in_switch.cc"
	"src/tint/lang/wgsl/ast/transform/remove_continue_in_switch.h"
	"src/tint/lang/wgsl/ast/transform/remove_phonies.cc"
	"src/tint/lang/wgsl/ast/transform/remove_phonies.h"
	"src/tint/lang/wgsl/ast/transform/remove_unreachable_statements.cc"
	"src/tint/lang/wgsl/ast/transform/remove_unreachable_statements.h"
	"src/tint/lang/wgsl/ast/transform/renamer.cc"
	"src/tint/lang/wgsl/ast/transform/renamer.h"
	"src/tint/lang/wgsl/ast/transform/robustness.cc"
	"src/tint/lang/wgsl/ast/transform/robustness.h"
	"src/tint/lang/wgsl/ast/transform/simplify_pointers.cc"
	"src/tint/lang/wgsl/ast/transform/simplify_pointers.h"
	"src/tint/lang/wgsl/ast/transform/single_entry_point.cc"
	"src/tint/lang/wgsl/ast/transform/single_entry_point.h"
	"src/tint/lang/wgsl/ast/transform/substitute_override.cc"
	"src/tint/lang/wgsl/ast/transform/substitute_override.h"
	"src/tint/lang/wgsl/ast/transform/transform.cc"
	"src/tint/lang/wgsl/ast/transform/transform.h"
	"src/tint/lang/wgsl/ast/transform/unshadow.cc"
	"src/tint/lang/wgsl/ast/transform/unshadow.h"
	"src/tint/lang/wgsl/ast/transform/vectorize_scalar_matrix_initializers.cc"
	"src/tint/lang/wgsl/ast/transform/vectorize_scalar_matrix_initializers.h"
	"src/tint/lang/wgsl/ast/transform/zero_init_workgroup_memory.cc"
	"src/tint/lang/wgsl/ast/transform/zero_init_workgroup_memory.h"
	"src/tint/lang/wgsl/ast/traverse_expressions.h"
	"src/tint/lang/wgsl/ast/type.cc"
	"src/tint/lang/wgsl/ast/type_decl.cc"
	"src/tint/lang/wgsl/ast/type_decl.h"
	"src/tint/lang/wgsl/ast/type.h"
	"src/tint/lang/wgsl/ast/unary_op_expression.cc"
	"src/tint/lang/wgsl/ast/unary_op_expression.h"
	"src/tint/lang/wgsl/ast/var.cc"
	"src/tint/lang/wgsl/ast/var.h"
	"src/tint/lang/wgsl/ast/variable.cc"
	"src/tint/lang/wgsl/ast/variable_decl_statement.cc"
	"src/tint/lang/wgsl/ast/variable_decl_statement.h"
	"src/tint/lang/wgsl/ast/variable.h"
	"src/tint/lang/wgsl/ast/while_statement.cc"
	"src/tint/lang/wgsl/ast/while_statement.h"
	"src/tint/lang/wgsl/ast/workgroup_attribute.cc"
	"src/tint/lang/wgsl/ast/workgroup_attribute.h"
	"src/tint/lang/wgsl/builtin_fn.cc"
	"src/tint/lang/wgsl/builtin_fn.h"
	"src/tint/lang/wgsl/diagnostic_rule.cc"
	"src/tint/lang/wgsl/diagnostic_rule.h"
	"src/tint/lang/wgsl/diagnostic_severity.cc"
	"src/tint/lang/wgsl/diagnostic_severity.h"
	"src/tint/lang/wgsl/extension.cc"
	"src/tint/lang/wgsl/extension.h"
	"src/tint/lang/wgsl/feature_status.cc"
	"src/tint/lang/wgsl/feature_status.h"
	"src/tint/lang/wgsl/inspector/entry_point.cc"
	"src/tint/lang/wgsl/inspector/entry_point.h"
	"src/tint/lang/wgsl/inspector/inspector.cc"
	"src/tint/lang/wgsl/inspector/inspector.h"
	"src/tint/lang/wgsl/inspector/resource_binding.cc"
	"src/tint/lang/wgsl/inspector/resource_binding.h"
	"src/tint/lang/wgsl/inspector/scalar.cc"
	"src/tint/lang/wgsl/inspector/scalar.h"
	"src/tint/lang/wgsl/intrinsic/ctor_conv.cc"
	"src/tint/lang/wgsl/intrinsic/ctor_conv.h"
	"src/tint/lang/wgsl/intrinsic/data.cc"
	"src/tint/lang/wgsl/intrinsic/dialect.h"
	"src/tint/lang/wgsl/intrinsic/type_matchers.h"
	"src/tint/lang/wgsl/ir/builtin_call.cc"
	"src/tint/lang/wgsl/ir/builtin_call.h"
	"src/tint/lang/wgsl/ir/unary.cc"
	"src/tint/lang/wgsl/ir/unary.h"
	"src/tint/lang/wgsl/language_feature.cc"
	"src/tint/lang/wgsl/language_feature.h"
	"src/tint/lang/wgsl/program/clone_context.cc"
	"src/tint/lang/wgsl/program/clone_context.h"
	"src/tint/lang/wgsl/program/program_builder.cc"
	"src/tint/lang/wgsl/program/program_builder.h"
	"src/tint/lang/wgsl/program/program.cc"
	"src/tint/lang/wgsl/program/program.h"
	"src/tint/lang/wgsl/reader/lower/lower.cc"
	"src/tint/lang/wgsl/reader/lower/lower.h"
	"src/tint/lang/wgsl/reader/options.h"
	"src/tint/lang/wgsl/reader/parser/classify_template_args.cc"
	"src/tint/lang/wgsl/reader/parser/classify_template_args.h"
	"src/tint/lang/wgsl/reader/parser/detail.h"
	"src/tint/lang/wgsl/reader/parser/helper_test.h"
	"src/tint/lang/wgsl/reader/parser/lexer.cc"
	"src/tint/lang/wgsl/reader/parser/lexer.h"
	"src/tint/lang/wgsl/reader/parser/parser.cc"
	"src/tint/lang/wgsl/reader/parser/parser.h"
	"src/tint/lang/wgsl/reader/parser/token.cc"
	"src/tint/lang/wgsl/reader/parser/token.h"
	"src/tint/lang/wgsl/reader/program_to_ir/ir_program_test.h"
	"src/tint/lang/wgsl/reader/program_to_ir/program_to_ir.cc"
	"src/tint/lang/wgsl/reader/program_to_ir/program_to_ir.h"
	"src/tint/lang/wgsl/reader/reader.cc"
	"src/tint/lang/wgsl/reader/reader.h"
	"src/tint/lang/wgsl/reserved_words.cc"
	"src/tint/lang/wgsl/reserved_words.h"
	"src/tint/lang/wgsl/resolver/dependency_graph.cc"
	"src/tint/lang/wgsl/resolver/dependency_graph.h"
	"src/tint/lang/wgsl/resolver/eval_test.h"
	"src/tint/lang/wgsl/resolver/incomplete_type.cc"
	"src/tint/lang/wgsl/resolver/incomplete_type.h"
	"src/tint/lang/wgsl/resolver/resolve.cc"
	"src/tint/lang/wgsl/resolver/resolve.h"
	"src/tint/lang/wgsl/resolver/resolver.cc"
	"src/tint/lang/wgsl/resolver/resolver.h"
	"src/tint/lang/wgsl/resolver/resolver_helper_test.h"
	"src/tint/lang/wgsl/resolver/sem_helper.cc"
	"src/tint/lang/wgsl/resolver/sem_helper.h"
	"src/tint/lang/wgsl/resolver/uniformity.cc"
	"src/tint/lang/wgsl/resolver/uniformity.h"
	"src/tint/lang/wgsl/resolver/unresolved_identifier.cc"
	"src/tint/lang/wgsl/resolver/unresolved_identifier.h"
	"src/tint/lang/wgsl/resolver/validator.cc"
	"src/tint/lang/wgsl/resolver/validator.h"
	"src/tint/lang/wgsl/sem/accessor_expression.cc"
	"src/tint/lang/wgsl/sem/accessor_expression.h"
	"src/tint/lang/wgsl/sem/array.cc"
	"src/tint/lang/wgsl/sem/array_count.cc"
	"src/tint/lang/wgsl/sem/array_count.h"
	"src/tint/lang/wgsl/sem/array.h"
	"src/tint/lang/wgsl/sem/behavior.cc"
	"src/tint/lang/wgsl/sem/behavior.h"
	"src/tint/lang/wgsl/sem/block_statement.cc"
	"src/tint/lang/wgsl/sem/block_statement.h"
	"src/tint/lang/wgsl/sem/break_if_statement.cc"
	"src/tint/lang/wgsl/sem/break_if_statement.h"
	"src/tint/lang/wgsl/sem/builtin_enum_expression.cc"
	"src/tint/lang/wgsl/sem/builtin_enum_expression.h"
	"src/tint/lang/wgsl/sem/builtin_fn.cc"
	"src/tint/lang/wgsl/sem/builtin_fn.h"
	"src/tint/lang/wgsl/sem/call.cc"
	"src/tint/lang/wgsl/sem/call.h"
	"src/tint/lang/wgsl/sem/call_target.cc"
	"src/tint/lang/wgsl/sem/call_target.h"
	"src/tint/lang/wgsl/sem/expression.cc"
	"src/tint/lang/wgsl/sem/expression.h"
	"src/tint/lang/wgsl/sem/for_loop_statement.cc"
	"src/tint/lang/wgsl/sem/for_loop_statement.h"
	"src/tint/lang/wgsl/sem/function.cc"
	"src/tint/lang/wgsl/sem/function_expression.cc"
	"src/tint/lang/wgsl/sem/function_expression.h"
	"src/tint/lang/wgsl/sem/function.h"
	"src/tint/lang/wgsl/sem/helper_test.h"
	"src/tint/lang/wgsl/sem/if_statement.cc"
	"src/tint/lang/wgsl/sem/if_statement.h"
	"src/tint/lang/wgsl/sem/index_accessor_expression.cc"
	"src/tint/lang/wgsl/sem/index_accessor_expression.h"
	"src/tint/lang/wgsl/sem/info.cc"
	"src/tint/lang/wgsl/sem/info.h"
	"src/tint/lang/wgsl/sem/load.cc"
	"src/tint/lang/wgsl/sem/load.h"
	"src/tint/lang/wgsl/sem/loop_statement.cc"
	"src/tint/lang/wgsl/sem/loop_statement.h"
	"src/tint/lang/wgsl/sem/materialize.cc"
	"src/tint/lang/wgsl/sem/materialize.h"
	"src/tint/lang/wgsl/sem/member_accessor_expression.cc"
	"src/tint/lang/wgsl/sem/member_accessor_expression.h"
	"src/tint/lang/wgsl/sem/module.cc"
	"src/tint/lang/wgsl/sem/module.h"
	"src/tint/lang/wgsl/sem/node.cc"
	"src/tint/lang/wgsl/sem/node.h"
	"src/tint/lang/wgsl/sem/pipeline_stage_set.h"
	"src/tint/lang/wgsl/sem/sampler_texture_pair.h"
	"src/tint/lang/wgsl/sem/statement.cc"
	"src/tint/lang/wgsl/sem/statement.h"
	"src/tint/lang/wgsl/sem/struct.cc"
	"src/tint/lang/wgsl/sem/struct.h"
	"src/tint/lang/wgsl/sem/switch_statement.cc"
	"src/tint/lang/wgsl/sem/switch_statement.h"
	"src/tint/lang/wgsl/sem/type_expression.cc"
	"src/tint/lang/wgsl/sem/type_expression.h"
	"src/tint/lang/wgsl/sem/type_mappings.h"
	"src/tint/lang/wgsl/sem/value_constructor.cc"
	"src/tint/lang/wgsl/sem/value_constructor.h"
	"src/tint/lang/wgsl/sem/value_conversion.cc"
	"src/tint/lang/wgsl/sem/value_conversion.h"
	"src/tint/lang/wgsl/sem/value_expression.cc"
	"src/tint/lang/wgsl/sem/value_expression.h"
	"src/tint/lang/wgsl/sem/variable.cc"
	"src/tint/lang/wgsl/sem/variable.h"
	"src/tint/lang/wgsl/sem/while_statement.cc"
	"src/tint/lang/wgsl/sem/while_statement.h"
	"src/tint/lang/wgsl/wgsl.def"
)


set(TINT_UTILS_SOURCES
	"src/tint/utils/bytes/buffer_reader.cc"
	"src/tint/utils/bytes/buffer_reader.h"
	"src/tint/utils/bytes/decoder.h"
	"src/tint/utils/bytes/endianness.h"
	"src/tint/utils/bytes/reader.cc"
	"src/tint/utils/bytes/reader.h"
	"src/tint/utils/bytes/swap.h"
	"src/tint/utils/containers/bitset.h"
	"src/tint/utils/containers/const_propagating_ptr.h"
	"src/tint/utils/containers/containers.cc"
	"src/tint/utils/containers/enum_set.h"
	"src/tint/utils/containers/filtered_iterator.h"
	"src/tint/utils/containers/hashmap_base.h"
	"src/tint/utils/containers/hashmap.h"
	"src/tint/utils/containers/hashset.h"
	"src/tint/utils/containers/map.h"
	"src/tint/utils/containers/predicates.h"
	"src/tint/utils/containers/reverse.h"
	"src/tint/utils/containers/scope_stack.h"
	"src/tint/utils/containers/slice.h"
	"src/tint/utils/containers/transform.h"
	"src/tint/utils/containers/unique_allocator.h"
	"src/tint/utils/containers/unique_vector.h"
	"src/tint/utils/containers/vector.h"
	"src/tint/utils/diagnostic/diagnostic.cc"
	"src/tint/utils/diagnostic/diagnostic.h"
	"src/tint/utils/diagnostic/formatter.cc"
	"src/tint/utils/diagnostic/formatter.h"
	"src/tint/utils/diagnostic/source.cc"
	"src/tint/utils/diagnostic/source.h"
	"src/tint/utils/generation_id.cc"
	"src/tint/utils/generation_id.h"
	"src/tint/utils/ice/debugger.cc"
	"src/tint/utils/ice/debugger.h"
	"src/tint/utils/ice/ice.cc"
	"src/tint/utils/ice/ice.h"
	"src/tint/utils/internal_limits.h"
	"src/tint/utils/macros/compiler.h"
	"src/tint/utils/macros/concat.h"
	"src/tint/utils/macros/defer.h"
	"src/tint/utils/macros/foreach.h"
	"src/tint/utils/macros/macros.cc"
	"src/tint/utils/macros/scoped_assignment.h"
	"src/tint/utils/macros/static_init.h"
	"src/tint/utils/math/crc32.h"
	"src/tint/utils/math/hash.h"
	"src/tint/utils/math/math.cc"
	"src/tint/utils/math/math.h"
	"src/tint/utils/memory/aligned_storage.h"
	"src/tint/utils/memory/bitcast.h"
	"src/tint/utils/memory/block_allocator.h"
	"src/tint/utils/memory/bump_allocator.h"
	"src/tint/utils/memory/memory.cc"
	"src/tint/utils/reflection.cc"
	"src/tint/utils/reflection.h"
	"src/tint/utils/result.cc"
	"src/tint/utils/result.h"
	"src/tint/utils/rtti/castable.cc"
	"src/tint/utils/rtti/castable.h"
	"src/tint/utils/rtti/ignore.h"
	"src/tint/utils/rtti/switch.cc"
	"src/tint/utils/rtti/switch.h"
	"src/tint/utils/rtti/traits.h"
	"src/tint/utils/strconv/float_to_string.cc"
	"src/tint/utils/strconv/float_to_string.h"
	"src/tint/utils/strconv/parse_num.cc"
	"src/tint/utils/strconv/parse_num.h"
	"src/tint/utils/symbol/symbol.cc"
	"src/tint/utils/symbol/symbol.h"
	"src/tint/utils/symbol/symbol_table.cc"
	"src/tint/utils/symbol/symbol_table.h"
	"src/tint/utils/system/env.h"
	"src/tint/utils/system/env_other.cc"
	"src/tint/utils/system/terminal.h"
	"src/tint/utils/system/terminal_other.cc"
	"src/tint/utils/text/base64.cc"
	"src/tint/utils/text/base64.h"
	"src/tint/utils/text/color_mode.cc"
	"src/tint/utils/text/color_mode.h"
	"src/tint/utils/text/string.cc"
	"src/tint/utils/text/string.h"
	"src/tint/utils/text/string_stream.cc"
	"src/tint/utils/text/string_stream.h"
	"src/tint/utils/text/styled_text.cc"
	"src/tint/utils/text/styled_text.h"
	"src/tint/utils/text/styled_text_printer.cc"
	"src/tint/utils/text/styled_text_printer.h"
	"src/tint/utils/text/styled_text_printer_other.cc"
	"src/tint/utils/text/styled_text_theme.cc"
	"src/tint/utils/text/styled_text_theme.h"
	"src/tint/utils/text/text_style.h"
	"src/tint/utils/text/unicode.cc"
	"src/tint/utils/text/unicode.h"
	"src/tint/utils/text_generator/text_generator.cc"
	"src/tint/utils/text_generator/text_generator.h"
	"src/utils/compiler.h"
	"src/utils/numeric.h"
)

set(FETCHCONTENT_QUIET FALSE)
include(FetchContent)

add_library(${PROJECT_NAME} STATIC)

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)

target_compile_definitions(
	${PROJECT_NAME} PUBLIC
		"TINT_BUILD_WGSL_READER=1"
		"TINT_BUILD_SPV_WRITER=1"
)

target_include_directories(
	${PROJECT_NAME} PUBLIC
		"${PROJECT_SOURCE_DIR}"
		"${PROJECT_SOURCE_DIR}/include"
)

target_sources(
	${PROJECT_NAME} PRIVATE
		${TINT_CORE_SOURCES}
		${TINT_WGSL_SOURCES}
		${TINT_SPIRV_SOURCES}
		${TINT_UTILS_SOURCES}
)

if(NOT TARGET SPIRV-Headers::SPIRV-Headers)
	FetchContent_Declare(
		spirv_headers
		GIT_REPOSITORY "git@github.com:KhronosGroup/SPIRV-Headers.git"
		GIT_TAG main
		GIT_PROGRESS TRUE
	)
	FetchContent_MakeAvailable(spirv_headers)
endif()

target_link_libraries(
	${PROJECT_NAME} PRIVATE
		SPIRV-Headers::SPIRV-Headers
)
